--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,26 +1,39 @@
-name: Production Build
-on:
-  pull_request:
-  push:
-    branches:
-      - master
+name: Build/release
+
+on: push
+
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  release:
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        node-version: [16.13.0]
+        os: [ubuntu-latest]
 
     steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Check out Git repository
+        uses: actions/checkout@v1
+
+      - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16.13.0
+
       - name: Install xmllint
         run: sudo apt-get install libxtst-dev libpng++-dev
+
       - name: NPM Install
         run: npm install
-      - name: Create Electron Build
-        run: npm run dist
+
+      - name: Build/release Electron app
+        uses: samuelmeuli/action-electron-builder@v1.6.0
+        with:
+          # GitHub token, automatically provided to the action
+          # (No need to define this secret in the repo settings)
+          github_token: ${{ secrets.github_token }}
+
+          # If the commit is tagged with a version (e.g. "v1.0.0"),
+          # release the app after building
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+        env:
+          NODE_OPTIONS: "--max_old_space_size=4096"
