--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "thedeck",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "author": "Me",
+  "description": "something",
   "private": true,
   "main": "./electron/main.js",
   "homepage": "./",
+  "npmRebuild": false,
   "build": {
+    "asar": true,
     "extends": null,
     "appId": "com.macrodeck",
     "mac": {
       "category": "your.app.category.type"
+    }
+  },
+  "resolve": {
+    "fallback": {
+      "buffer": "resolve.require('buffer')"
     }
   },
   "jest": {
@@ -33,6 +42,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "buffer": "^6.0.3",
     "chroma-js": "^2.1.2",
     "cors": "^2.8.5",
     "electron-json-storage": "^4.5.0",
@@ -40,7 +50,6 @@
     "ip-address": "^8.1.0",
     "lodash": "^4.17.21",
     "node-abi": "^3.5.0",
-    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "obs-websocket-js": "^4.0.3",
     "ping": "^0.4.1",
@@ -51,7 +60,6 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-toastify": "^8.1.0",
-    "robotjs": "^0.6.0",
     "socket.io": "^4.4.1",
     "styled-components": "^5.3.3",
     "time-stamp": "^2.2.0",
@@ -104,7 +112,6 @@
     "@types/styled-components": "^5.1.20",
     "@types/uuid": "^8.3.4",
     "concurrently": "^7.0.0",
-    "cpx": "^1.5.0",
     "electron": "^16.0.7",
     "electron-builder": "^22.14.5"
   }
