--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -8,19 +8,16 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [macos-latest, windows-latest]
 
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
       - name: Install Node.js, NPM and Yarn
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 16.13.0
-
-      - name: Install xmllint
-        run: sudo apt-get install libxtst-dev libpng++-dev
 
       - name: NPM Install
         run: npm install
