--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -22,6 +22,9 @@ jobs:
       - name: NPM Install
         run: npm install
 
+      - name: Electron Rebuild
+        run: npm run rebuild
+
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1.6.0
         with:
@@ -32,5 +35,6 @@ jobs:
           # If the commit is tagged with a version (e.g. "v1.0.0"),
           # release the app after building
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          args: "-c.snap.publish=github -p always"
         env:
           NODE_OPTIONS: "--max_old_space_size=4096"
