--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "buffer": "^6.0.3",
     "chroma-js": "^2.1.2",
     "cors": "^2.8.5",
+    "electron-disable-file-drop": "^1.0.2",
     "electron-json-storage": "^4.5.0",
     "file-saver": "^2.0.5",
     "ip-address": "^8.1.0",
     "lodash": "^4.17.21",
-    "node-abi": "^3.5.0",
+    "node-abi": "^3.8.0",
     "npm-run-all": "^4.1.5",
     "obs-websocket-js": "^4.0.3",
     "ping": "^0.4.1",
@@ -65,6 +66,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-toastify": "^8.1.0",
+    "robotjs": "^0.6.0",
     "socket.io": "^4.4.1",
     "styled-components": "^5.3.3",
     "time-stamp": "^2.2.0",
@@ -82,7 +84,9 @@
     "eject": "react-scripts eject",
     "pack": "electron-builder --dir",
     "postinstall": "electron-builder install-app-deps",
-    "rebuild": "npm rebuild --runtime=electron --target=16.0.7 --disturl=https://atom.io/download/atom-shell --abi=99",
+    "rebuild": "npm rebuild --runtime=electron --target=17.0.1 --disturl=https://atom.io/download/atom-shell --abi=102",
+    "rebuilder": ".\\node_modules\\.bin\\electron-rebuild.cmd",
+    "rebuildRobot": "electron-rebuild -f -w robotjs",
     "start": "react-scripts start .",
     "test": "react-scripts test --coverage"
   },
@@ -117,7 +121,7 @@
     "@types/styled-components": "^5.1.20",
     "@types/uuid": "^8.3.4",
     "concurrently": "^7.0.0",
-    "electron": "^16.0.7",
+    "electron": "^17.0.1",
     "electron-builder": "^22.14.5",
     "electron-rebuild": "^3.2.7",
     "node-sass": "^7.0.1"
