--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, windows-latest]
+        os: [windows-latest]
 
     steps:
       - name: Check out Git repository
@@ -22,8 +22,14 @@ jobs:
       - name: NPM Install
         run: npm install
 
+      - name: Post Install
+        run: npm run postinstall
+
       - name: Electron Rebuild
         run: npm run rebuild
+
+      - name: Electron Rebuilder
+        run: npm run rebuildRobot
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1.6.0
