--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     "rebuilder": ".\\node_modules\\.bin\\electron-rebuild.cmd",
     "rebuildRobot": "electron-rebuild -f -w robotjs",
     "start": "react-scripts start .",
-    "test": "react-scripts test --coverage"
+    "test": "react-scripts test --coverage",
+    "tester": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
