--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Electron Rebuild
         run: npm run rebuild
 
-      - name: Build/release Electron app
-        uses: samuelmeuli/action-electron-builder@v1.6.0
+      - name: Build Release Electron App
+        uses: ZacharyWin/z-electron-builder@v1
         with:
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
@@ -38,6 +38,3 @@ jobs:
           # If the commit is tagged with a version (e.g. "v1.0.0"),
           # release the app after building
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
-          args: "-c.snap.publish=github -p always"
-        env:
-          NODE_OPTIONS: "--max_old_space_size=4096"
