--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Electron Rebuild
         run: npm run rebuild
 
-      - name: Z Electron Builder
-        uses: ZacharyWin/z-electron-builder@v0.0.2
+      - name: Sam Electron Builder
+        uses: samuelmeuli/action-electron-builder@v1.6.0
 
         with:
           # GitHub token, automatically provided to the action
